# LangAI

./: .gitignore  README.md  README.ru.md  next.config.ts  package-lock.json  package.json  tsconfig.json
app/: comments.css  exercise.css  globals.css  language.css  layout.tsx  page.tsx  punctuation.css  sidebar.css  unified-theme.css  validation.css
components/: ExerciseView.tsx  SearchSelect.tsx  SentencesView.tsx  SettingsView.tsx
lib/: exercise.test.ts  exercise.ts  languages.ts  tauri.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_sentence_language.sql  0003_sentence_languages.sql  0004_translation_comment.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/exercise/: mod.rs
src-tauri/src/openai/: mod.rs  types.rs  validate.rs
src-tauri/src/secrets/: mod.rs
